--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 
 html, body, :global(#root) {
   height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-overflow-scrolling : touch;
 }
 
